# imgui-platform-kit

./: .codecov.yml  .coderabbit.yaml  .gitignore  CHANGELOG.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: coverage.yml  gemini-doc-sync.yml  gemini-issue-triage.yml  linux.yml  macos.yml  release.yml  vcpkg-maintenance.yml  windows.yml
imgui-platform-kit/: CMakeLists.txt  build.sh  build_macos.sh
imgui-platform-kit/examples/: example.cpp
imgui-platform-kit/include/: colour_palette.h  log_window.h  themes.h  user_interface.h  user_interface_parameters.h  user_interface_window.h
imgui-platform-kit/include/macos/: glfw_opengl3_user_interface.h
imgui-platform-kit/include/win32/: win32_dx12_user_interface.h
imgui-platform-kit/src/: log_window.cpp  themes.cpp  user_interface.cpp  user_interface_parameters.cpp
imgui-platform-kit/src/linux/: glfw_opengl3_user_interface.cpp
imgui-platform-kit/src/macos/: glfw_opengl3_user_interface.cpp
imgui-platform-kit/src/win32/: win32_dx12_user_interface.cpp
imgui-platform-kit/tests/: CMakeLists.txt  test_colour_palette.cpp  test_log_window.cpp  test_parameters.cpp  test_themes.cpp  test_window_flags.cpp
imgui-platform-kit/wiki/: Configuration.md
wiki/: Building-from-Source.md  Built-in-Windows.md  Configuration.md  Creating-Windows.md  Getting-Started.md  Home.md  ImPlot-and-Node-Editor.md  Themes-and-Colours.md
